Avoid prosemirror from wrapping in item and hazard sheet in most common cases

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -438,8 +438,12 @@ a[href]:hover {
     }
 }
 
+// Ever so slightly more compact prosemirror menu
 .prosemirror menu {
-    gap: 3px;
+    gap: 2px;
+    button {
+        padding: 1px 5px;
+    }
 }
 
 // System theme Foundry tooltips
