--- a/src/styles/actor/hazard/_index.scss
+++ b/src/styles/actor/hazard/_index.scss
@@ -113,9 +113,6 @@
 
             &.prosemirror {
                 height: 12.5rem; // When the editor is open, fill more space
-                .editor-container {
-                    margin: var(--space-4) 0;
-                }
             }
         }
 
