--- a/src/styles/actor/npc/_index.scss
+++ b/src/styles/actor/npc/_index.scss
@@ -406,9 +406,6 @@
 
                     &.prosemirror {
                         min-height: 18rem;
-                        .editor-container {
-                            margin: var(--space-4) 0;
-                        }
                     }
                 }
             }
