--- a/src/styles/item/_header.scss
+++ b/src/styles/item/_header.scss
@@ -63,5 +63,6 @@
         flex-basis: 100%;
         margin-top: 0.125rem;
         padding: 0;
+        margin-bottom: 0;
     }
 }
